bug fix: page container alignment of content

--- a/components/page/styles/_page.scss
+++ b/components/page/styles/_page.scss
@@ -1,7 +1,7 @@
 @mixin base() {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: flex-start;
     margin-left: auto;
     margin-right: auto;
     min-height: 100vh;
